Load ItemDetail by JavaScript

--- a/website-project/tsconfig.json
+++ b/website-project/tsconfig.json
@@ -1,14 +1,14 @@
 {
 	"compileOnSave": true,
 	"compilerOptions": {
-		"target": "esnext",
-		"module": "commonjs"
+		"target": "esnext"
 	},
 	"include": ["./**/*"],
 	"exclude": [
 		"./plugins/**/*",
 		"./typings/**/*",
 		"./built/**/*",
+		"./*.js",
 		"node_modules"
 	]
 }
