--- a/website-project/package.json
+++ b/website-project/package.json
@@ -7,11 +7,18 @@
     "test": "tests"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "tsc": "tsc"
   },
   "author": "Group 05",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^14.14.10",
+    "ts-node": "^9.0.0",
     "typescript": "^4.1.2"
+  },
+  "dependencies": {
+    "@types/express": "^4.17.9",
+    "express": "^4.17.1"
   }
 }
