--- a/website-project/package.json
+++ b/website-project/package.json
@@ -7,6 +7,9 @@
     "test": "tests"
   },
   "scripts": {
+    "start": "node index.js",
+    "build": "webpack",
+    "heroku-postbuild": "ng build --prod",
     "test": "echo \"Error: no test specified\" && exit 1",
     "tsc": "tsc"
   },
@@ -20,5 +23,9 @@
   "dependencies": {
     "@types/express": "^4.17.9",
     "express": "^4.17.1"
+  },
+  "engines": {
+    "node": "14.15.0",
+    "npm": "6.x"
   }
 }
