--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
   "scripts": {
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "tsc": "tsc",
-    "build": "ng build"
+    "tsc": "tsc"
   },
   "author": "Group 05",
   "license": "ISC",
