--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
   },
   "scripts": {
     "start": "node index.js",
-    "test": "nodemon index",
-    "tsc": "tsc"
+    "test": "nodemon index"
   },
   "author": "Group 05",
   "license": "ISC",
@@ -20,9 +19,11 @@
     "typescript": "^4.1.2"
   },
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.2.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "passport": "^0.4.1"
   },
   "engines": {
     "node": "14.15.0",
