--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
 	"compilerOptions": {
 		"target": "esnext",
 		// "removeComments": true,
-		"module": "CommonJS",
+		"module": "esnext",
 		"allowSyntheticDefaultImports": true,
 		"moduleResolution": "node",
 		"esModuleInterop": true,
