--- a/package.json
+++ b/package.json
@@ -15,20 +15,29 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.9",
+    "@types/express-flash": "0.0.2",
+    "@types/express-session": "^1.17.3",
     "@types/jquery": "^3.5.5",
     "@types/node": "^14.14.13",
     "ts-node": "^9.0.0",
     "typescript": "^4.1.2"
   },
   "dependencies": {
+    "@types/bcrypt": "^3.0.0",
+    "@types/passport": "^1.0.5",
+    "@types/passport-local": "^1.0.33",
     "bcrypt": "^5.0.0",
+    "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
+    "express-flash": "0.0.2",
     "express-handlebars": "^5.2.0",
+    "express-session": "^1.17.1",
     "jquery": "^3.5.1",
     "lorem-ipsum": "^2.0.3",
     "mongodb": "^3.6.3",
     "morgan": "^1.10.0",
-    "passport": "^0.4.1"
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0"
   },
   "engines": {
     "node": "14.15.0",
