--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "start": "node index.js",
     "test": "nodemon index",
-    "tsc": "tsc -p tsconfig.dom.json;  tsc -p tsconfig.nodejs.json"
+    "tsc": "tsc -p tsconfig.dom.json;  tsc -p tsconfig.nodejs.json",
+    "db": "nodemon db tests/DatabaseSchema.js"
   },
   "author": "Group 05",
   "license": "ISC",
@@ -18,6 +19,7 @@
     "@types/express-flash": "0.0.2",
     "@types/express-session": "^1.17.3",
     "@types/jquery": "^3.5.5",
+    "@types/mongoose": "^5.10.3",
     "@types/node": "^14.14.13",
     "ts-node": "^9.0.0",
     "typescript": "^4.1.2"
@@ -35,6 +37,7 @@
     "jquery": "^3.5.1",
     "lorem-ipsum": "^2.0.3",
     "mongodb": "^3.6.3",
+    "mongoose": "^5.11.11",
     "morgan": "^1.10.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0"
