--- a/package.json
+++ b/package.json
@@ -30,11 +30,13 @@
     "@types/passport-local": "^1.0.33",
     "bcrypt": "^5.0.0",
     "bootstrap-table": "^1.18.1",
+    "chart.js": "^2.9.4",
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
     "express-flash": "0.0.2",
     "express-handlebars": "^5.2.0",
     "express-session": "^1.17.1",
+    "highcharts": "^8.2.2",
     "jquery": "^3.5.1",
     "lorem-ipsum": "^2.0.3",
     "mongodb": "^3.6.3",
